# ops-coplit

./: .editorconfig  .env.example  Dockerfile  LICENSE  README.md  package-lock.json  pyproject.toml  render.yaml  requirements.txt  test.js  test2.js  test3.js  test4.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-pages.yml
app/: config.py  context.py  engine.py  logger.py  main.py  schemas.py  simulator.py
app/api/: dependencies.py
app/api/routers/: data.py  emergency.py  operations.py  simulation.py  websocket.py
app/services/: dependencies.py  operations.py  store.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/js/: api.js  app.js  events.js  map.js  state.js
frontend/js/services/: mockApi.js
frontend/js/ui/: actions.js  broadcast.js  modals.js  render.js  roster.js  toast.js
tests/: test_api.py  test_emergency_router.py  test_engine.py  test_simulator.py
