[project]
name = "stadium-ops-copilot"
version = "1.0.0"
description = "AI-powered operations assistant for FIFA World Cup 2026 venue staff"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
